-----------------------
PVFS2 Release ChangeLog
-----------------------


pvfs2-1.1.0pre1
===============
- network protocol: more 64-bit alignment fixes
- build: hide karma details in its module.mk
- build: remove duplicate commands used for QUIET_COMPILE
- build: fix test configure library detection
-


pvfs2-1.0.1
===========
- ib: add configure-time checks for mosal library variations
- ib: flush send queue work requests periodically
- ib: search receive queue for both eager and rts (D. Beilloin)
- improved support for some cases of file holes (that require zero fill)
- fixed a crash bug due to incorrect assertion regarding zero fill
- applied annotations and cleanups to the kernel module in response to
  using the automated correctness checker called 'sparse'
- fixed a bug that did not properly allow storage space removals when
  using ReiserFS as the underlying file system
- added more redhat checks for determining if we need to patch the
  kernel module code to work properly with particular releases
- FAQ documentation update


pvfs2-1.0.0
===========
- disabled mmap readahead cache by default; allow configure option to
  optionally enable it
- added support for handling several cases of file hole zero fills
  (i.e. sparse files)
- configured acache timeout to be 5 seconds by default through the
  vfs; sysint was already 5 seconds
- added karma program installation to make install target
- redhat 9 related changes (in order to work out of the box)
  - used some 2.6.x kernel code on redhat 9 2.4.x kernels, if detected
  - no longer mark pages as reserved on redhat 9 2.4.x kernels, as it
    causes an oops on their kernel (i.e. not necessary)
  - installed a wrapper script in place of the pvfs2-server that
    exports the LD_ASSUME_KERNEL environment variable before running
    the server(to avoid using the redhat NPTL library which is
    incompatible)
  - fixed make kmod{24}_install even if there are multiple UTS_RELEASE