@@ -1,3 +1,6 @@
+
+ifdef BUILD_VIS
+
 DIR := src/apps/vis
 
 VISSRC += \
@@ -7,3 +10,8 @@ VISSRC += \
 VISMISCSRC += \
     $(DIR)/pvfs2-vis.c
 
+# add SDL include dirs and libs
+MODCFLAGS_$(DIR) := @VISCFLAGS@
+MODLDFLAGS_$(DIR) := @VISLIBS@ -lSDL_ttf
+
+endif  # BUILD_VIS
